# Recommendation_System

./: .gitignore  Recommendation_System.sln  pyproject.toml  readme.md  requirements.txt
Recommendation_System.ApiService/: Program.cs  Recommendation_System.ApiService.csproj  appsettings.json
Recommendation_System.ApiService/Properties/: launchSettings.json
Recommendation_System.ApiService/Routes/: Addresses.cs  Carts.cs  Categories.cs  OrderItems.cs  Orders.cs  Payments.cs  ProductImages.cs  Products.cs  UserInteractions.cs
Recommendation_System.AppHost/: Program.cs  Recommendation_System.AppHost.csproj
Recommendation_System.AppHost/Properties/: launchSettings.json
Recommendation_System.Auth/: AuthDbContext.cs  Program.cs  Recommendation_System.Auth.csproj
Recommendation_System.Auth/Infrastructure/: AuthExtensions.cs  EndpointFilterExtension.cs  GoogleAuthConfiguration.cs  PermissionResoruceRequirement.cs  (+1 more)
Recommendation_System.Data/: AppDbContext.cs  Recommendation_System.Data.csproj
Recommendation_System.Tests/: Recommendation_System.Tests.csproj  WebTests.cs
Recommendation_System.Web/: AddClients.cs  DeviceIdHandlerMiddleware.cs  Program.cs  Recommendation_System.Web.csproj  TokenHeaderHandlerMiddleware.cs  UserApiClient.cs  WeatherApiClient.cs
backend_fastapi/: README.md  requirements.txt
docs/: README.md  create_docs.sh
fastapi_recommendation/: __init__.py  engine.py  main.py  models.py  service.py
frontend_nextjs/: README.md  next.config.mjs  package-lock.json  package.json
tests/: test_backend_api.py  test_recommender.py
(+128 files in other folders)
