[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-recommendation-system"
version = "1.1.0"
description = "Reusable FastAPI-based hybrid recommendation engine"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "pydantic==2.9.2",
  "uvicorn[standard]==0.30.6"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "httpx==0.27.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
