[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-recommendation-system"
version = "1.1.0"
description = "Reusable FastAPI-based hybrid recommendation engine"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.4.0",
  "passlib[bcrypt]==1.7.4",
  "sqlalchemy==2.0.36",
  "uvicorn[standard]==0.30.6"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "httpx==0.27.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
